crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__array_spread-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let tuple = [a, ...b]\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 4..21,
                pattern: Ident(
                    BindingIdent {
                        span: 4..9,
                        id: Ident {
                            span: 4..9,
                            name: "tuple",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Tuple(
                        Tuple {
                            span: 12..21,
                            elems: [
                                ExprOrSpread {
                                    spread: None,
                                    expr: Ident(
                                        Ident {
                                            span: 13..14,
                                            name: "a",
                                        },
                                    ),
                                },
                                ExprOrSpread {
                                    spread: Some(
                                        16..20,
                                    ),
                                    expr: Ident(
                                        Ident {
                                            span: 19..20,
                                            name: "b",
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
