crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__array_spread-3.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let tuple = [1, ...[2, 3]]\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 4..26,
                pattern: Ident(
                    BindingIdent {
                        span: 4..9,
                        id: Ident {
                            span: 4..9,
                            name: "tuple",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Tuple(
                        Tuple {
                            span: 12..26,
                            elems: [
                                ExprOrSpread {
                                    spread: None,
                                    expr: Lit(
                                        Num(
                                            Num {
                                                span: 13..14,
                                                value: "1",
                                            },
                                        ),
                                    ),
                                },
                                ExprOrSpread {
                                    spread: Some(
                                        16..25,
                                    ),
                                    expr: Tuple(
                                        Tuple {
                                            span: 19..25,
                                            elems: [
                                                ExprOrSpread {
                                                    spread: None,
                                                    expr: Lit(
                                                        Num(
                                                            Num {
                                                                span: 20..21,
                                                                value: "2",
                                                            },
                                                        ),
                                                    ),
                                                },
                                                ExprOrSpread {
                                                    spread: None,
                                                    expr: Lit(
                                                        Num(
                                                            Num {
                                                                span: 23..24,
                                                                value: "3",
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
