crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__blocks-2.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let foo = do {let x = 5; let y = 10; x + y};\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..44,
                pattern: Ident(
                    BindingIdent {
                        span: 4..7,
                        id: Ident {
                            span: 4..7,
                            name: "foo",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Let(
                        Let {
                            span: 14..24,
                            pattern: Some(
                                Ident(
                                    BindingIdent {
                                        span: 18..19,
                                        id: Ident {
                                            span: 18..19,
                                            name: "x",
                                        },
                                    },
                                ),
                            ),
                            type_ann: None,
                            init: Lit(
                                Num(
                                    Num {
                                        span: 22..23,
                                        value: "5",
                                    },
                                ),
                            ),
                            body: Let(
                                Let {
                                    span: 25..36,
                                    pattern: Some(
                                        Ident(
                                            BindingIdent {
                                                span: 29..30,
                                                id: Ident {
                                                    span: 29..30,
                                                    name: "y",
                                                },
                                            },
                                        ),
                                    ),
                                    type_ann: None,
                                    init: Lit(
                                        Num(
                                            Num {
                                                span: 33..35,
                                                value: "10",
                                            },
                                        ),
                                    ),
                                    body: Op(
                                        Op {
                                            span: 37..42,
                                            op: Add,
                                            left: Ident(
                                                Ident {
                                                    span: 37..38,
                                                    name: "x",
                                                },
                                            ),
                                            right: Ident(
                                                Ident {
                                                    span: 41..42,
                                                    name: "y",
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
