crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__blocks-5.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let foo = do {let x = 5; console.log(x); x};\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 4..43,
                pattern: Ident(
                    BindingIdent {
                        span: 4..7,
                        id: Ident {
                            span: 4..7,
                            name: "foo",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Let(
                        Let {
                            span: 18..23,
                            pattern: Some(
                                Ident(
                                    BindingIdent {
                                        span: 18..19,
                                        id: Ident {
                                            span: 18..19,
                                            name: "x",
                                        },
                                    },
                                ),
                            ),
                            type_ann: None,
                            init: Lit(
                                Num(
                                    Num {
                                        span: 22..23,
                                        value: "5",
                                    },
                                ),
                            ),
                            body: Let(
                                Let {
                                    span: 25..40,
                                    pattern: None,
                                    type_ann: None,
                                    init: App(
                                        App {
                                            span: 25..39,
                                            lam: Member(
                                                Member {
                                                    span: 25..36,
                                                    obj: Ident(
                                                        Ident {
                                                            span: 25..32,
                                                            name: "console",
                                                        },
                                                    ),
                                                    prop: Ident(
                                                        Ident {
                                                            span: 33..36,
                                                            name: "log",
                                                        },
                                                    ),
                                                },
                                            ),
                                            args: [
                                                ExprOrSpread {
                                                    spread: None,
                                                    expr: Ident(
                                                        Ident {
                                                            span: 37..38,
                                                            name: "x",
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    ),
                                    body: Ident(
                                        Ident {
                                            span: 41..42,
                                            name: "x",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
